P5 E-Learning/force-app/main/default/objects/Progress_Unit_Per_Response__c/Progress_Unit_Per_Response__c.object-meta.xml
<CustomObject>
    <label>Progress Unit Per Response</label>
    <nameField>
        <displayFormat>PU-{0}</displayFormat>
        <label>Progress Unit Per Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progresses Unit Per Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>