P5 E-Learning/force-app/main/default/objects/Progress_Unit_Per_Response__c/fields/Progress_Module_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Progress_Module_Per_Unit__c</fullName>
    <label>Progress Module Per Unit</label>
    <referenceTo>Progress_Module_Per_Unit__c</referenceTo>
    <relationshipLabel>Progresses Unit Per Responses</relationshipLabel>
    <relationshipName>Progresses_Unit_Per_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>