P5 E-Learning/force-app/main/default/objects/Progress_Unit_Per_Response__c/fields/Tries__c.field-meta.xml
<CustomField>
    <fullName>Tries__c</fullName>
    <label>Tries</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>