P5 E-Learning/force-app/main/default/objects/Progress_Unit_Per_Response__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Progresses Unit Per Responses</relationshipLabel>
    <relationshipName>Progresses_Unit_Per_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>