P5 E-Learning/force-app/main/default/objects/Progress_Unit_Per_Response__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>CASESAFEID( Progress_Module_Per_Unit__r.User__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>